fix parse export module; add support for hindi
